<resources>
    <string name="app_name">ShweMi-Admin</string>
    <string name="daily_price">Daily Price</string>
    <string name="sample_take_and_return">Sample Take and Return</string>
    <string name="daily">Daily</string>
    <string name="point">Point</string>
    <string name="discount">Discount</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="set_up_stock">Set up Stock</string>
    <string name="collect_stock">Collect Stock</string>
    <string name="collect_stock_and_give_data">Collect Stock And Give Data</string>
    <string name="edit_stock">Edit Stock</string>
    <string name="stock">Stock</string>
    <string name="order_stock">Order Stock</string>
    <string name="box">Box</string>
    <string name="check_box_fragment">Check Box Fragment</string>
    <string name="repair_stock">Repair Stock</string>
    <string name="give_gold">Give Gold</string>
    <string name="check_box_weight">Check Box Weight</string>
    <string name="arrange_box">Arrange Box</string>
    <string name="goldsmith">Goldsmith</string>
    <string name="transfer_checkup_stock">Transfer/Checkup Stock</string>
    <string name="promotion">Promotion</string>
    <string name="confirm_voucher">Confirm Voucher</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="logged_in_by">Logged in by</string>
    <string name="daily_gold_price">Daily Gold Price</string>
    <string name="gold_block_ac">Gold Block(AC)</string>
    <string name="_15p_gq">15P GQ</string>
    <string name="_22k_gq">22k GQ</string>
    <string name="diamond">Diamond</string>
    <string name="wg_1_gm">WG[1 gm]</string>
    <string name="rebuy_100">Rebuy[100%]</string>
    <string name="by_table">By Table</string>
    <string name="price_by_table">Price By Table</string>
    <string name="small_items">Small Items</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="damage">Damage</string>
    <string name="good">Good</string>
    <string name="not_to_go">Not to Go</string>
    <string name="large_items">Large Items</string>
    <string name="update">Update</string>
    <string name="sample_take_amp_return"><![CDATA[Sample Take & Return]]></string>
    <string name="sample_take">Sample Take</string>
    <string name="sample_return">Sample Return</string>
    <string name="stock_code">Stock Code</string>
    <string name="scan_here">Scan Here</string>
    <string name="total_scanned_stock">Total Scanned Stock - </string>
    <string name="stock_code_label">Stock Code -</string>
    <string name="enter_specification">Enter Specification...</string>
    <string name="invoice_code">Invoice Code</string>
    <string name="label_invoice_code">Invoice Code -</string>
    <string name="stock_name">Stock Name</string>
    <string name="enter_stock_name">Enter Stock Name</string>
    <string name="weight_gm">Weight (gm)</string>
    <string name="specification">Specification</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="image">Image</string>
    <string name="give">Give</string>
    <string name="order">Order</string>
    <string name="upload_image">Upload Image</string>
    <string name="scanned_invoice">Scanned Invoice</string>
    <string name="old_invoice">Old Invoice</string>
    <string name="deposit">Deposit</string>
    <string name="balance">Balance</string>
    <string name="enter_total_amount">Enter Total Amount</string>
    <string name="enter_old_total_amount">Enter Old Total Amount</string>
    <string name="confirm">Confirm</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="enter_weigh_different_amount">Enter Weigh Different Amount</string>
    <string name="enter_stock_code">Enter Stock Code</string>
    <string name="enter_balance_amount">Enter Balance Amount</string>
    <string name="enter_deposit_amount">Enter Deposit Amount</string>
    <string name="reason">Reason</string>
    <string name="unconfirmed_voucher">Unconfirmed Voucher</string>
    <string name="customer_qr">Customer QR</string>
    <string name="customer_name">Customer Name</string>
    <string name="total_point">Total Point</string>
    <string name="exchange_points">Exchange Points</string>
    <string name="enter_point_amount">Enter Point Amount</string>
    <string name="date_range">Date Range</string>
    <string name="from_to">From - To</string>
    <string name="item">Item</string>
    <string name="jewellery_type">Jewellery Type</string>
    <string name="single">Single</string>
    <string name="batch">Batch</string>
    <string name="weight">Weight</string>
    <string name="stock_with_label_weight">* Stock with Label Weight</string>
    <string name="next">Next</string>
    <string name="wastage">Wastage</string>
    <string name="bonus">Bonus</string>
    <string name="size">Size</string>
    <string name="amount">Amount</string>

    <style name="voucher">Voucher</style>
    <style name="text_new">New</style>
    <style name="outsider">outsider</style>

    <string name="try_again">Try Again</string>
    <string name="rebuy">Rebuy</string>
    <string name="rebuy_price">Rebuy Price</string>
    <string name="group">Group</string>
    <string name="frequently_used">Frequently Used</string>
    <string name="image_view">Image View</string>
    <string name="group_name">Group name</string>
    <string name="add">Add</string>
    <string name="new_group">New Group</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="category">Category</string>
    <string name="per_unit">per unit</string>
    <string name="avg_weight">Avg Weight</string>
    <string name="avg_wastage">Avg Wastage</string>
    <string name="video">Video</string>
    <string name="image_gif"><![CDATA[Image & gif]]></string>

    <string name="order_to_gs">Order to Gs</string>
    <string name="reconmend_ahtal">တွဲဖက်ဝတ်ဆင်နိုင်သော အထည်များ</string>
    <string name="new_category">New Category</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="enter_weight_in_gm">Enter Weight in gm</string>
    <string name="ok">OK</string>
    <string name="choose_design">Choose Design</string>
    <string name="gold_gem_gm">Gold+Gem (gm)</string>
    <string name="gem_gm">Gem (gm)</string>
    <string name="pt_clip_price">PT/Clip Price</string>
    <string name="service_fee">Service Fee</string>
    <string name="enter_price">Enter Price</string>
    <string name="create">Create</string>
    <string name="add_gem_value">Add Gem Value</string>
    <string name="enter_weight_and_shape_of_diamond">Enter Weight and Shape of Diamond</string>
    <string name="weight_and_shape">Weight and Shape</string>
    <string name="enter_diamond_price_for_gs">Enter Diamond Price For GS</string>
    <string name="enter_diamond_value_from_gs">Enter Diamond Value from GS</string>
    <string name="enter_sell_price_of_diamond">Enter Sell Price of Diamond</string>
    <string name="diamond_actual_sell_value">Diamond Actual Sell Value</string>
    <string name="enter_gold_gem_weight">Enter Gold + Gem Weight</string>
    <string name="target_box">Target Box</string>
    <string name="required">Required</string>
    <string name="not_from_box">Not From Box</string>
    <string name="stock_qty">Stock Qty -</string>
    <string name="box_code">Box Code</string>
    <string name="box_code_label">Box Code -</string>
    <string name="choose_due_date">Choose Due Date</string>
    <string name="handed_list">Handed List</string>
    <string name="total_sample_taken_items">Total Sample Taken Items</string>
    <string name="item_name_dummy">အသီးကွင်း ဟန်းချိန်း</string>
    <string name="average_weight_per_unit">Average Weight per Unit:</string>
    <string name="tap_to_order">Tap to Order</string>
    <string name="stock_name_optional">Stock Name</string>
    <string name="weight_gm_optional">Weight(gm)</string>
    <string name="specification_optional">Specification</string>
    <string name="taken_sample_items">Taken Sample Items</string>
    <string name="no_sample_taken">No Sample Taken</string>
    <string name="new_order">New Order</string>
    <string name="remove">remove</string>
    <string name="there_is_no_design_in_database">There is no design in database!</string>
    <string name="items_in_voucher">Items in Voucher</string>
    <string name="enter_flash_sale_title">Enter Flash Sale Title</string>
    <string name="stock_in_voucher">Stock In Voucher</string>
</resources>