<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/daily"
            android:title="@string/daily">
            <menu>
                <item
                    android:id="@+id/userProfileFragment"
                    android:title="@string/daily_price"
                    android:icon="@drawable/ic_daily_price"/>
                <item
                    android:id="@+id/sampleTakeAndReturnFragment"
                    android:title="@string/sample_take_and_return"
                    android:icon="@drawable/ic_sample_take_and_return"/>
                <item
                    android:id="@+id/confirmVoucherFragment"
                    android:title="@string/confirm_voucher"
                    android:icon="@drawable/ic_confirm_voucher"/>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/promotion"
            android:title="@string/promotion">
            <menu>
                <item
                    android:id="@+id/pointFragment"
                    android:title="@string/point"
                    android:icon="@drawable/ic_point"/>
                <item
                    android:id="@+id/discountFragment"
                    android:title="@string/discount"
                    android:icon="@drawable/ic_discount"/>
                <item
                    android:id="@+id/flashSaleFragment"
                    android:title="@string/flash_sale"
                    android:icon="@drawable/ic_flash_sale"/>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/stock"
            android:title="@string/stock">
            <menu>
                <item
                    android:id="@+id/setUpStockFragment"
                    android:title="@string/set_up_stock"
                    android:icon="@drawable/ic_set_up_stock"/>
                <item
                    android:id="@+id/collectStockFragment"
                    android:title="@string/collect_stock"
                    android:icon="@drawable/ic_collect_stock"/>
                <item
                    android:id="@+id/editStockFragment"
                    android:title="@string/edit_stock"
                    android:icon="@drawable/ic_edit_stock"/>
                <item
                    android:id="@+id/transferCheckUpFragment"
                    android:title="@string/transfer_checkup_stock"
                    android:icon="@drawable/ic_transfer_check_up_stock"/>
                <item
                    android:id="@+id/orderStockFragment"
                    android:title="@string/order_stock"
                    android:icon="@drawable/ic_order_stock"/>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/box"
            android:title="@string/box">
            <menu>
                <item
                    android:id="@+id/arrangeBoxFragment"
                    android:title="@string/arrange_box"
                    android:icon="@drawable/ic_arrange_box"/>
                <item
                    android:id="@+id/checkBoxWeightFragment"
                    android:title="@string/check_box_weight"
                    android:icon="@drawable/ic_check_box_weight"/>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/group5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/goldSmith"
            android:title="@string/goldsmith">
            <menu>
                <item
                    android:id="@+id/giveGoldFragment"
                    android:title="@string/give_gold"
                    android:icon="@drawable/ic_give_gold"/>
                <item
                    android:id="@+id/repairStockFragment"
                    android:title="@string/repair_stock"
                    android:icon="@drawable/ic_repair_stock"/>
            </menu>
        </item>
    </group>

</menu>