<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:layout_marginTop="16dp"
        android:id="@+id/layout_scanned_stock_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        layout="@layout/include_check_up_stock_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_voucher"
        android:background="@color/base_pink"
        app:layout_constraintTop_toBottomOf="@id/chip_layout"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm"
        />
    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/chip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:flexWrap="wrap"
        app:justifyContent="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipt_gp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true"
            app:singleSelection="true"
            android:layout_marginTop="8dp">
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_required"
                android:layout_width="150dp"
                android:textAlignment="center"
                android:textColor="@color/collect_stock_chip_text_color_selector"
                app:chipBackgroundColor="@color/chip_selector_color"
                android:elevation="8dp"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_height="wrap_content"
                android:text="@string/required"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_not_from_box"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:checked="true"
                android:layout_width="150dp"
                app:chipBackgroundColor="@color/chip_selector_color"
                android:elevation="8dp"
                android:textColor="@color/collect_stock_chip_text_color_selector"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/not_from_box"/>
        </com.google.android.material.chip.ChipGroup>
    </com.google.android.flexbox.FlexboxLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/confirm"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textAppearance="@style/TextAppearance.ShweMi.Headline6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>